- 0.1.0 : Move extraneous exports from index.js into utils.js.
- 0.2.0 : Add browser support for Browserify/Webpack.
- 0.3.0 : Pass named arguments to .generate instead of positional.
- 1.0.0 : Added support for Uuid V1 and extracted competitive benchmarks.
- 1.0.1 : Remove lockfile from release.
- 1.0.2 : Fix bad version push.
- 1.0.3 : Delete the extra benchmarks for real.
- 1.1.0 : Performance improvements and renamed resetClockSequence to reset.
- 1.1.1 : Fixed repo link.
- 1.2.0 : Added generic UUID factory
- 1.3.0 : Added UUID V6 support